# AgentCracker

./: .gitignore  CLAUDE.md  README.md  config.yaml  idor_test.py  install-cco.sh  install.sh  pyproject.toml  requirements.txt  setup_openrouter.sh  system_prompt.md
.emergent/: emergent.yml
.github/workflows/: ci.yml
hackeragent/: __init__.py  __main__.py
hackeragent/cli/: banner.py  main.py
hackeragent/core/: budget.py  circuit_breaker.py  compressor.py  config.py  config_validator.py  crash_reporter.py  health.py  llm_client.py  mcp_manager.py  notifier.py  orchestrator.py  parallel_exec.py  planner.py  prompt_engine.py  rag_context.py  replay.py  router.py  scope.py  session.py  telemetry.py  tool_cache.py  tool_router.py  vision.py  workflow_launcher.py
hackeragent/tests/: test_circuit_breaker.py  test_compressor.py  test_config_validator.py  test_health.py  test_llm_client.py  test_notifier.py  test_orchestrator_integration.py  test_parallel_exec.py  test_planner.py  test_prompt_cache.py  test_rag_context.py  test_replay_and_classifier.py  test_router.py  test_stability.py  test_telemetry.py  test_tool_cache.py  test_vision.py  test_web_advanced.py
hackeragent/utils/: logger.py
mcp-servers/mcp-browser/: server.py
mcp-servers/mcp-ctf-platform/: server.py
mcp-servers/mcp-kali-tools/: server.py
mcp-servers/mcp-memory-server/: server.py
memory/: PRD.md  test_credentials.md
scripts/: attack_planner.py  recon_daemon.py  swarm_orchestrator.py
workflows/: bug-bounty-workflow.md  ctf-workflow.md  supervisor-workflow.md
(+4 files in other folders)
